plugins {
    id 'java'
    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
}
group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}


sourceSets {
    main {
        java {
            srcDirs += "$buildDir/generated/sources/annotationProcessor/java/main"
        }
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_16
    targetCompatibility = JavaVersion.VERSION_16
}

configurations {
    querydsl.extendsFrom implementation, runtimeOnly, compileOnly
}

dependencies {
    implementation 'org.hibernate:hibernate-core:5.5.7.Final'
    runtimeOnly 'org.postgresql:postgresql:42.2.23.jre7'
    implementation 'com.vladmihalcea:hibernate-types-52:2.12.1'
    implementation 'org.slf4j:slf4j-api:1.7.32'

    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    implementation 'com.querydsl:querydsl-jpa:5.0.0'
    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0'

    implementation 'org.hibernate:hibernate-jcache:5.5.7.Final'
    implementation 'org.ehcache:ehcache:3.9.7'

//    annotationProcessor 'org.hibernate:hibernate-jpamodelgen:5.5.7.Final'

    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'

    testImplementation 'org.assertj:assertj-core:3.23.1'
    testCompileOnly 'org.projectlombok:lombok:1.18.20'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.11.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
    testImplementation 'com.h2database:h2:1.4.200'
}

querydsl {
    jpa = true
    querydslSourcesDir = "$buildDir/generated/sources/annotationProcessor/java/main"
}

compileQuerydsl {
//    enabled = false
    options.annotationProcessorPath = configurations.querydsl
}

compileQuerydsl.dependsOn(clean)

test {
    useJUnitPlatform()
}